[package]
name = "twitch_chat_browser_source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.32.0", features = ["full"] }
twitch-irc = "5.0.1"
tower-http = { version = "0.4", features = ["fs"] }
futures = "0.3.28"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
ammonia = "3.3.0"
maplit = "1.0.2"
